--- a/scss/partials/_info-display.scss
+++ b/scss/partials/_info-display.scss
@@ -10,6 +10,7 @@
 	padding: 10px;
   @include engraved-effect;
   position: absolute;
+	overflow: hidden;
 }
 
 .stat-bar {
